--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://gitlab.com/project-may/administration-process-system#readme",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.8.0"
